<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorFingerprintActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sensorfingerprint_activity_tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/sensorfingerprint_result"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dip"
            android:layout_marginBottom="100dip"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_UUIDTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/uuid"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_UUIDValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_deviceModelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensorfingerprint_deviceModel"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_deviceModelValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorModelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensorfingerprint_sensorModel"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorModelValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorVendorTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensorfingerprint_sensorVender"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorVendorValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorMeasurementRangeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensorfingerprint_sensorMeasurementRange"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorMeasurementRangeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorNoiseTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensorfingerprint_sensorNoise"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorNoiseValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorResolutionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensorfingerprint_sensorResolution"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorResolutionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorSensitivityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensorfingerprint_sensorSensitivity"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorSensitivityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorLinearityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensorfingerprint_sensorLinearity"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorLinearityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorRawBiasTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/sensor_raw_bias"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/sensorfingerprint_activity_tv_sensorRawBiasValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/sensorfingerprint_activity_btn_startover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/sensorfingerprint_startOver" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>